--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+background-color: rgb(255, 215, 222);
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 20px;
+margin: 60px;
+}
+button{
+  size: 50px;
+  border-radius: 15px;
+  background-color: azure;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+button:hover{
+  background-color: palevioletred;
+}
+input{
+  border-radius: 15px;
+}
+
