"Added navbar, updated routes and imported bootstrap"
This diff has added a new component for the navbar, updated the app.routes.ts file to include new routes and a default route, and imported bootstrap into the index

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-tarefas></app-tarefas>
+<!-- <app-tarefas></app-tarefas> -->
 <!-- <app-cliente></app-cliente> -->
-<router-outlet />
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
