--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,9 +8,9 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <!-- colocamos a path do app.route.ts no href  -->
-          <a class="nav-link" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
+          <!-- <a class="nav-link" aria-current="page" href="/">Home</a>
+        </li> -->
+        <!-- <li class="nav-item">
           <a class="nav-link" href="nova-rota">Nova rota</a>
         </li>
         <li class="nav-item">
@@ -18,6 +18,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="cliente">Clientes</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="pokemon">Pokemons</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="estados">Estados IBGE</a>
         </li>
 
       </ul>
