--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -1,22 +1,25 @@
-
 <form [formGroup]="clientForm" (ngSubmit)="inserir()">
-  <p>
-    Nome: <input type="text" formControlName="nome">
-  </p>
-  <p>
-    Telefone: <input type="text" formControlName="telefone">
-  </p>
-  <button type="submit">Enviar</button>
+  <p>Nome: <input type="text" formControlName="nome" /></p>
+  <p>Telefone: <input type="text" formControlName="telefone" /></p>
+  <button class="btn button-edit" type="submit">Enviar</button>
 </form>
 
-<h2>Listar </h2>
+<h2>Listar</h2>
 
 <ul>
   @for (item of clientes; track $index){
-     <li>  {{item.id}} - {{item.nome}} - {{item.telefone}}
-        <input type="button" value="remover" (click)="remover(item.id)" />
-
-    </li>
+  <li class="client-line">
+    {{ item.id }} - {{ item.nome }} - {{ item.telefone }}
+    <input
+      class="btn button-edit"
+      type="button"
+      value="remover"
+      (click)="remover(item.id)"
+    />
+    <a href="cliente/{{item.id}}" class="btn button-edit" > Editar</a>
+  </li>
   }
+
 </ul>
+
 
