--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-custom">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Gabriela</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse navbar-custom" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <!-- colocamos a path do app.route.ts no href  -->
-          <!-- <a class="nav-link" aria-current="page" href="/">Home</a>
-        </li> -->
-        <!-- <li class="nav-item">
+          <!-- colocamos a path do app.route.ts no href   -->
+          <a class="nav-link" aria-current="page" href="/">Home</a>
+        </li> 
+        <li class="nav-item">
           <a class="nav-link" href="nova-rota">Nova rota</a>
         </li>
         <li class="nav-item">
@@ -18,7 +18,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="cliente">Clientes</a>
-        </li> -->
+        </li> 
         <li class="nav-item">
           <a class="nav-link" href="pokemon">Pokemons</a>
         </li>
@@ -31,3 +31,4 @@
     </div>
   </div>
 </nav>
+
