--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,14 +6,17 @@
     </button>
     <div class="collapse navbar-collapse navbar-custom" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <!-- <li class="nav-item"> -->
           <!-- colocamos a path do app.route.ts no href   -->
-          <a class="nav-link" aria-current="page" href="/">Home</a>
-        </li> 
-        <li class="nav-item">
+          <!-- <a class="nav-link" aria-current="page" href="/">Home</a>
+        </li>  -->
+        <!-- <li class="nav-item">
           <a class="nav-link" href="nova-rota">Nova rota</a>
-        </li>
+        </li> -->
         <li class="nav-item">
+          <a class="nav-link" href="/">Fornecedores</a>
+        </li>
+        <!-- <li class="nav-item">
           <a class="nav-link" href="nova-rota">Nova rota</a>
         </li>
         <li class="nav-item">
@@ -24,7 +27,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="estados">Estados IBGE</a>
-        </li>
+        </li> -->
 
       </ul>
 
